# Block-Map-Based-Localization

./: CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
config/: m2dgr_params.yaml  nclt_params.yaml
include/: utility.h
include/block_localization/: ndt_est.hpp  pose_estimator.hpp  pose_system.hpp
launch/: run_m2dgr.launch  run_nclt.launch
msg/: cloud_info.msg
rviz/: block_localization.rviz
src/: block_localization_nodelet.cpp  globalmap_server_nodelet.cpp  points_preprocessing_nodelet.cpp
srv/: queryMap.srv
