<?xml version="1.0"?>
<package>
  <name>block_localization</name>
  <version>0.0.0</version>
  <description>The Block-Map-Based Localization Package</description>

  <maintainer email="yixiao.feng@student.unsw.edu.au">Yixiao Feng</maintainer>

  <license>BSD-3-Clause license</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>nodelet</build_depend>
  <run_depend>nodelet</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>map_server</build_depend>
  <run_depend>map_server</run_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>ndt_omp</build_depend>
  <run_depend>ndt_omp</run_depend>
  <build_depend>GTSAM</build_depend>
  <run_depend>GTSAM</run_depend>

  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
